Cleaned up  how the  live-labs backend was getting installed. (#77)
- Updated start_command in app 'Tutorial'
- Added files: code/editor_test/file1.py, code/editor_test/file2.py
- Deleted files: code/tutorial_app/requirements.txt
- Modified files: apt.txt, postBuild.bash

--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -136,7 +136,7 @@ execution:
           start_command: |-
             cd /project/code/tutorial_app && \
             export PROXY_PREFIX && \
-            .venv/bin/streamlit run app.py --server.baseUrlPath=$PROXY_PREFIX
+            streamlit run app.py --server.baseUrlPath=$PROXY_PREFIX
           health_check_command: curl -I http://localhost:8501
           stop_command: |
             pkill -9 -f 'streamlit run app.py'
