--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -3,7 +3,7 @@ specMinorVersion: 2
 meta:
     name: nim-anywhere
     image: project-nim-anywhere
-    description: Accelerate Your AI Deployment With NVIDIA NIM.
+    description: agri-Culture-workbench-nim-anywhere.git
     labels:
         - RAG
         - NIM
