trying to commit changes

--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -167,8 +167,8 @@ execution:
         sharedMemoryMB: 16384  # Increased for Spark's unified memory usage
     secrets:
         - variable: NGC_API_KEY
-#          description: NGC Personal Key from https://org.ngc.nvidia.com/setup/personal-keys
-          description: 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
+          description: NGC Personal Key from https://org.ngc.nvidia.com/setup/personal-keys
+#          description: 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
     mounts:
         - type: project
           target: /project/
