--- a/variables.env
+++ b/variables.env
@@ -8,6 +8,12 @@ APP_REDIS_DSN=redis://redis:6379/0
 NGC_CLI_ORG=default
 NGC_HOME=~/.cache/nvidia-nims
 
+# Hardcode these to ensure the Python app ignores the cloud defaults
+NVIDIA_LLM_URL=http://host.docker.internal:8000/v1
+NVIDIA_EMBED_URL=http://host.docker.internal:8001/v1
+LLM_MODEL_NAME=meta/llama-3.1-8b-instruct
+EMBEDDING_MODEL_NAME=nvidia/llama-3.2-nemoretriever-300m-embed-v1
+
 LLM_NIM_0_MODEL=meta/llama3-8b-instruct
 LLM_NIM_0_NIM_VERSION=1.0.0
 LLM_NIM_0_NIM_GPUS=all
