--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -3,7 +3,7 @@ specMinorVersion: 2
 meta:
     name: nim-anywhere
     image: project-nim-anywhere
-    description: agri-Culture-workbench-nim-anywhere.git
+    description: "Enterprise RAG for agri-Culture.click Phase I - DGX Spark Optimized"
     labels:
         - RAG
         - NIM
@@ -41,53 +41,39 @@ environment:
               start_command: jupyter lab --allow-root --port 8888 --ip 0.0.0.0 --no-browser --NotebookApp.base_url=\$PROXY_PREFIX --NotebookApp.default_url=/lab --NotebookApp.allow_origin='*'
               health_check_command: '[ \$(echo url=\$(jupyter lab list | head -n 2 | tail -n 1 | cut -f1 -d'' '' | grep -v ''Currently'' | sed "s@/?@/lab?@g") | curl -o /dev/null -s -w ''%{http_code}'' --config -) == ''200'' ]'
               stop_command: jupyter lab stop 8888
-              user_msg: ""
-              logfile_path: ""
-              timeout_seconds: 60
-              icon_url: ""
               webapp_options:
-                autolaunch: true
-                port: "8888"
-                proxy:
-                    trim_prefix: false
-                url_command: jupyter lab list | head -n 2 | tail -n 1 | cut -f1 -d' ' | grep -v 'Currently'
+                  autolaunch: true
+                  port: "8888"
+                  proxy:
+                      trim_prefix: false
+                      url_command: jupyter lab list | head -n 2 | tail -n 1 | cut -f1 -d' ' | grep -v 'Currently'
         programming_languages:
             - python3
-        icon_url: ""
         image_version: 1.0.3
         os: linux
         os_distro: ubuntu
         os_distro_release: "22.04"
         schema_version: v2
-        user_info:
-            uid: ""
-            gid: ""
-            username: ""
         package_managers:
             - name: apt
               binary_path: /usr/bin/apt
               installed_packages:
-                - curl
-                - git
-                - git-lfs
-                - python3
-                - gcc
-                - python3-dev
-                - python3-pip
-                - vim
-                - less
-                - jq
-                - ssh
+                  - curl
+                  - git
+                  - git-lfs
+                  - python3
+                  - gcc
+                  - python3-dev
+                  - python3-pip
+                  - vim
+                  - jq
             - name: pip
               binary_path: /usr/local/bin/pip
               installed_packages:
-                - jupyterlab==4.0.7
-                - pydantic==1.10.13  # <--- ADD THIS LINE
-                - confz==1.6.0       # <--- ADD THIS LINE for safety
-                - langchain-nvidia-ai-endpoints
-    package_manager_environment:
-            name: ""
-            target: ""
+                  - jupyterlab==4.0.7
+                  - pydantic==1.10.13
+                  - confz==1.6.0
+                  - langchain-nvidia-ai-endpoints
     compose_file_path: "docker-compose.yaml"
     variables:
         - name: NVIDIA_LLM_URL
@@ -105,79 +91,7 @@ execution:
         - name: Visual Studio Code
           type: vs-code
           class: native
-          start_command: ""
-          health_check_command: '[ \$(ps aux | grep ".vscode-server" | grep -v grep | wc -l ) -gt 4 ] && [ \$(ps aux | grep "/.vscode-server/bin/.*/node .* net.createConnection" | grep -v grep | wc -l) -gt 0 ]'
-          stop_command: ""
-          user_msg: ""
-          logfile_path: ""
-          timeout_seconds: 120
-          icon_url: ""
         - name: Chat Frontend
           type: custom
           class: webapp
-          start_command: export PROXY_PREFIX && cd /project/code && uvicorn --log-level info --reload frontend.server:app --reload-dir frontend --port 7070 --host 0.0.0.0 --timeout-graceful-shutdown 10
-          health_check_command: curl localhost:7070/healthz > /dev/null
-          stop_command: ps aux | grep frontend.server:app | grep -v grep | awk '{print $2}' | xargs kill
-          user_msg: ""
-          logfile_path: ""
-          timeout_seconds: 60
-          icon_url: ""
-          webapp_options:
-            autolaunch: true
-            port: "7070"
-            proxy:
-                trim_prefix: false
-            url: http://localhost:7070/
-        - name: Chain Server
-          type: custom
-          class: webapp
-          start_command: export PROXY_PREFIX && export NGC_API_KEY && cd /project/code && APP_LOG_LEVEL=DEBUG uvicorn --log-level info chain_server.server:app --port 3030 --host 0.0.0.0 --timeout-graceful-shutdown 10 --reload-exclude 'frontend/*' --reload-exclude 'evaluation/*' --reload-include '*.html' --reload-include '*.css' --reload-include '*.yaml' --reload-include '*.js' --reload --reload-include reload
-          health_check_command: ps aux |grep -v grep | grep chain_server.server:app
-          stop_command: ps aux | grep chain_server.server:app | grep -v grep | awk '{print $2}' | xargs kill
-          user_msg: ""
-          logfile_path: ""
-          timeout_seconds: 60
-          icon_url: avatars.githubusercontent.com/u/126733545
-          webapp_options:
-            autolaunch: false
-            port: "3030"
-            proxy:
-                trim_prefix: true
-            url: http://localhost:3030
-        - name: Tutorial
-          type: custom
-          class: webapp
-          start_command: |-
-            cd /project/code/tutorial_app && \
-            export PROXY_PREFIX && \
-            streamlit run app.py --server.baseUrlPath=$PROXY_PREFIX
-          health_check_command: curl -I http://localhost:8501
-          stop_command: |
-            pkill -9 -f 'streamlit run app.py'
-          user_msg: ""
-          logfile_path: ""
-          timeout_seconds: 15
-          icon_url: ""
-          webapp_options:
-            autolaunch: true
-            port: "8501"
-            proxy:
-                trim_prefix: false
-            url: http://localhost:8501
-    resources:
-        gpu:
-            requested: 1
-        sharedMemoryMB: 16384  # Increased for Spark's unified memory usage
-    secrets:
-        - variable: NGC_API_KEY
-#          description: NGC Personal Key from https://org.ngc.nvidia.com/setup/personal-keys
-          description: ${NGC_API_KEY}
-    mounts:
-        - type: project
-          target: /project/
-          description: Project directory
-          options: rw
-        - type: volume
-          target: /nvwb-shared-volume/
-          description: ""
-          options: volumeName=nvwb-shared-volume
+          start_command: export PROXY_PREFIX &&
