--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -41,19 +41,28 @@ environment:
               start_command: jupyter lab --allow-root --port 8888 --ip 0.0.0.0 --no-browser --NotebookApp.base_url=\$PROXY_PREFIX --NotebookApp.default_url=/lab --NotebookApp.allow_origin='*'
               health_check_command: '[ \$(echo url=\$(jupyter lab list | head -n 2 | tail -n 1 | cut -f1 -d'' '' | grep -v ''Currently'' | sed "s@/?@/lab?@g") | curl -o /dev/null -s -w ''%{http_code}'' --config -) == ''200'' ]'
               stop_command: jupyter lab stop 8888
+              user_msg: ""
+              logfile_path: ""
+              timeout_seconds: 60
+              icon_url: ""
               webapp_options:
                   autolaunch: true
                   port: "8888"
                   proxy:
                       trim_prefix: false
-                      url_command: jupyter lab list | head -n 2 | tail -n 1 | cut -f1 -d' ' | grep -v 'Currently'
+                  url_command: jupyter lab list | head -n 2 | tail -n 1 | cut -f1 -d' ' | grep -v 'Currently'
         programming_languages:
             - python3
+        icon_url: ""
         image_version: 1.0.3
         os: linux
         os_distro: ubuntu
         os_distro_release: "22.04"
         schema_version: v2
+        user_info:
+            uid: ""
+            gid: ""
+            username: ""
         package_managers:
             - name: apt
               binary_path: /usr/bin/apt
@@ -66,7 +75,9 @@ environment:
                   - python3-dev
                   - python3-pip
                   - vim
+                  - less
                   - jq
+                  - ssh
             - name: pip
               binary_path: /usr/local/bin/pip
               installed_packages:
@@ -74,6 +85,9 @@ environment:
                   - pydantic==1.10.13
                   - confz==1.6.0
                   - langchain-nvidia-ai-endpoints
+        package_manager_environment:
+            name: ""
+            target: ""
     compose_file_path: "docker-compose.yaml"
     variables:
         - name: NVIDIA_LLM_URL
@@ -91,7 +105,64 @@ execution:
         - name: Visual Studio Code
           type: vs-code
           class: native
+          start_command: ""
+          health_check_command: '[ \$(ps aux | grep ".vscode-server" | grep -v grep | wc -l ) -gt 4 ]'
+          stop_command: "pkill -f .vscode-server"
+          user_msg: ""
+          logfile_path: ""
+          timeout_seconds: 120
+          icon_url: ""
+          webapp_options:
+              autolaunch: false
+              port: "0"
+              proxy:
+                  trim_prefix: false
+              url: http://localhost
         - name: Chat Frontend
           type: custom
           class: webapp
-          start_command: export PROXY_PREFIX &&
+          start_command: export PROXY_PREFIX && cd /project/code && uvicorn --log-level info --reload frontend.server:app --reload-dir frontend --port 7070 --host 0.0.0.0 --timeout-graceful-shutdown 10
+          health_check_command: curl localhost:7070/healthz > /dev/null
+          stop_command: ps aux | grep frontend.server:app | grep -v grep | awk '{print $2}' | xargs kill
+          user_msg: ""
+          logfile_path: ""
+          timeout_seconds: 60
+          icon_url: ""
+          webapp_options:
+              autolaunch: true
+              port: "7070"
+              proxy:
+                  trim_prefix: false
+              url: http://localhost:7070/
+        - name: Chain Server
+          type: custom
+          class: webapp
+          start_command: export PROXY_PREFIX && export NGC_API_KEY && cd /project/code && APP_LOG_LEVEL=DEBUG uvicorn --log-level info chain_server.server:app --port 3030 --host 0.0.0.0 --timeout-graceful-shutdown 10 --reload --reload-include reload
+          health_check_command: ps aux | grep -v grep | grep chain_server.server:app
+          stop_command: ps aux | grep chain_server.server:app | grep -v grep | awk '{print $2}' | xargs kill
+          user_msg: ""
+          logfile_path: ""
+          timeout_seconds: 60
+          icon_url: ""
+          webapp_options:
+              autolaunch: false
+              port: "3030"
+              proxy:
+                  trim_prefix: true
+              url: http://localhost:3030
+resources:
+    gpu:
+        requested: 1
+    sharedMemoryMB: 16384
+secrets:
+    - variable: NGC_API_KEY
+      description: "NVIDIA NGC API Key"
+mounts:
+    - type: project
+      target: /project/
+      description: Project directory
+      options: rw
+    - type: volume
+      target: /nvwb-shared-volume/
+      description: "Shared volume"
+      options: volumeName=nvwb-shared-volume
